Change company information in settings
Updated company details in settings.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       const [currentSlip, setCurrentSlip] = useState(null);
       const [showSettings, setShowSettings] = useState(false);
       const [settings, setSettings] = useState({
-        companyName: 'Your Company Name',
-        companyAddress: '123 Business Street, City, State, India',
-        companyPhone: '+91 98765 43210',
-        companyEmail: 'info@company.com',
+        companyName: 'Jai shree shyam,
+        companyAddress: ',
+        companyPhone: ',
+        companyEmail: ',
         currency: '₹'
       });
 
