--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       const [showSettings, setShowSettings] = useState(false);
       const [settings, setSettings] = useState({
         companyName: 'Jai shree shyam,
-        companyAddress: ',
-        companyPhone: ',
-        companyEmail: ',
+        companyAddress: '',
+        companyPhone: '',
+        companyEmail: '',
         currency: '₹'
       });
 
